add more disable

--- a/Pages/ReturnRequestsDetails.cshtml
+++ b/Pages/ReturnRequestsDetails.cshtml
@@ -240,7 +240,7 @@
                     foreach (var item in Model.ReturnRequestItems)
                     {
                         <tr>
-                            <td style="font-size: 14px;" colspan="4">@item.index</td>
+                            <td style="font-size: 14px;" colspan="4"></td>
                             <td style="font-size: 14px;">@item.ItemCode</td>
                             <td style="font-size: 14px;">@item.ItemNameEnglish</td>
                             <td style="font-size: 14px;">@item.ReturnedQuantity</td>
