--- a/Pages/ViewDoctypes.cshtml
+++ b/Pages/ViewDoctypes.cshtml
@@ -4,9 +4,38 @@
 @{
     ViewData["Title"] = "View Document Type";
 }
-
 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center py-4 pb-2">
-    <!-- Breadcrumb -->
+    <div class="d-block mb-4 mb-md-0">
+        <nav aria-label="breadcrumb">
+            <ol class="breadcrumb bg-transparent p-2 mb-0">
+                <li class="breadcrumb-item d-flex align-items-center">
+                    <img src="images/home.png" alt="Home" width="16" height="16" class="me-2" />
+                    <a href="/Home" class="text-decoration-none">@Model.lblHome</a>
+                </li>
+                <li class="breadcrumb-item d-flex align-items-center">
+                    <img src="images/management.png" alt="Home" width="16" height="16" class="me-2" />
+                    Users
+                </li>
+                 <li class="breadcrumb-item d-flex align-items-center">
+                    <img src="images/management.png" alt="Home" width="16" height="16" class="me-2" />
+                    Document Types
+                </li>
+            </ol>
+        </nav>
+        <h2 class="h4">Document Types</h2>
+        <!-- <p class="mb-0">Your web analytics dashboard template.</p> -->
+    </div>
+    <div class="btn-toolbar mb-2 mb-md-0 d-flex flex-wrap">
+        <div class="btn-group d-flex mx-3 ms-lg-3">
+                <a asp-page="/ManageUsers" class="btn btn-secondary">&larr; Back </a>
+        </div>
+        <div class="btn-group d-flex mx-3 ms-lg-3">
+            <a asp-page="AddDocumentType" class="btn btn-primary">+ Add Document Type</a>
+        </div>
+    </div>
+</div>
+<!-- <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center py-4 pb-2">
+
     <nav aria-label="breadcrumb" class="mb-3">
         <ol class="breadcrumb">
             <li class="breadcrumb-item"><a asp-page="/Home">Home</a></li>
@@ -16,7 +45,7 @@
     </nav>
     <h1 class="mb-4">Document Types</h1>
     <div class="btn-toolbar mb-2 mb-md-0 d-flex flex-wrap">
-        <!-- Back Button -->
+
         <div class="btn-group d-flex mx-3 ms-lg-3">
             <a asp-page="/ManageUsers" class="btn btn-secondary">&larr; Back </a>
         </div>
@@ -25,11 +54,11 @@
             <a asp-page="AddDocumentType" class="btn btn-primary">+ Add Document Type</a>
         </div>
     </div>
-</div>
+</div> -->
 
-<div class="card border-0 shadow mb-4">
-    <div class="card-body">
-        <div class="table-responsive">
+  <div class="card border-0 shadow mb-4">
+        <div class="card-body">
+            <div class="table-responsive">
 
             @if (!Model.DocumentTypeList.Any())
             {
@@ -37,8 +66,8 @@
             }
             else
             {
-                <table class="table table-bordered table-striped">
-                    <thead class="table-light">
+                 <table class="table table-centered table-nowrap mb-0 rounded">
+                    <thead class="thead-light">
                         <tr>
                             <th>ID</th>
                             <th>Document Type</th>
