--- a/Pages/AddUnit.cshtml
+++ b/Pages/AddUnit.cshtml
@@ -99,7 +99,7 @@
                                         foreach (var warehousetype in Model.WarehouseTypes)
 
                                         {
-                                            <option value="@warehousetype.StoreType">@warehousetype.StoreName</option>
+                                            <option value="@warehousetype.StoreType">@warehousetype.StoreType</option>
                                         }
                                     }
                                 </select>
