--- a/Pages/AddPrivileges.cshtml
+++ b/Pages/AddPrivileges.cshtml
@@ -5,31 +5,42 @@
 }
 
 <!-- Breadcrumb -->
-<nav aria-label="breadcrumb" class="mb-3">
-    <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a asp-page="/Home">Home</a></li>
-        <li class="breadcrumb-item"><a asp-page="/ManageUsers">Users</a></li>
-        <li class="breadcrumb-item"><a asp-page="/ViewPrivileges">Document Types</a></li>
-        <li class="breadcrumb-item active" aria-current="page">Add Privilege</li>
-    </ol>
-</nav>
-
-<!-- Back Button -->
-<div class="mb-3">
-    <a asp-page="/ViewPrivileges" class="btn btn-outline-secondary">&larr; Back </a>
+<div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center py-4 pb-2">
+    <div class="d-block mb-4 mb-md-0">
+        <nav aria-label="breadcrumb">
+            <ol class="breadcrumb bg-transparent p-2 mb-0">
+                <li class="breadcrumb-item d-flex align-items-center">
+                    <img src="images/home.png" alt="Home" width="16" height="16" class="me-2" />
+                    <a href="/Home" class="text-decoration-none">@Model.lblHome</a>
+                </li>
+                <li class="breadcrumb-item d-flex align-items-center">
+                    <img src="images/management.png" alt="Home" width="16" height="16" class="me-2" />
+                    <a href="/ManageUsers" class="text-decoration-none">@Model.lblUsers</a>
+                </li>
+                <li class="breadcrumb-item d-flex align-items-center">
+                    <img src="images/management.png" alt="Home" width="16" height="16" class="me-2" />
+                    @Model.lblPrivileges
+                </li>
+            </ol>
+        </nav>
+    </div>
 </div>
+<!-- Back Button -->
+<!-- <div class="mb-3">
+    <a asp-page="/ViewPrivileges" class="btn btn-outline-secondary">&larr; Back </a>
+</div> -->
 
 <h2>Create Privilege</h2>
 
 <form method="post">
     <div class="mb-3">
-        <label asp-for="Privilege.PrivilegeName" class="form-label"></label>
+        <label asp-for="Privilege.PrivilegeName" class="form-label">@Model.lblPrivilegeName</label>
         <input asp-for="Privilege.PrivilegeName" class="form-control" />
         <span asp-validation-for="Privilege.PrivilegeName" class="text-danger"></span>
     </div>
 
-    <button type="submit" class="btn btn-primary">Create</button>
-    <a asp-page="ManageUsers" class="btn btn-secondary">Cancel</a>
+    <button type="submit" class="btn btn-sm btn-success me-1">Create</button>
+    <a asp-page="ManageUsers" class="btn btn-sm btn-secondary">Cancel</a>
 </form>
 
 @section Scripts {
