--- a/Pages/newreturnRequest.cshtml
+++ b/Pages/newreturnRequest.cshtml
@@ -239,6 +239,8 @@
         }
        document.addEventListener("DOMContentLoaded", function () {
             const addBtn = document.getElementById("addEntryBtn");
+            const wrapper = document.getElementById("returnEntriesWrapper");
+            console.log("check required")
 
             function checkAllRequiredFieldsFilled() {
                 const currentEntry = document.querySelector(".return-entry:last-child"); // check the last entry
@@ -260,6 +262,7 @@
         });
 
         document.getElementById("addEntryBtn").addEventListener("click", function () {
+            console.log('addEntryBtn')
             const wrapper = document.getElementById("returnEntriesWrapper");
             const firstEntry = wrapper.querySelector(".return-entry");
             const newEntry = firstEntry.cloneNode(true);
@@ -313,6 +316,7 @@
             wrapper.appendChild(newEntry);
             
             entryIndex++;
+            checkAllRequiredFieldsFilled();
         });
 
         // Initial remove buttons setup
