--- a/Pages/HazardTypes/Create.cshtml
+++ b/Pages/HazardTypes/Create.cshtml
@@ -4,18 +4,39 @@
 @{
     ViewData["Title"] = "Create";
 }
+<div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center py-4 pb-2">
+    <div class="d-block mb-4 mb-md-0">
+        <nav aria-label="breadcrumb">
+            <ol class="breadcrumb bg-transparent p-2 mb-0">
+                <li class="breadcrumb-item d-flex align-items-center">
+                    <img src="images/home.png" alt="Home" width="16" height="16" class="me-2" />
+                    <a href="/Home" class="text-decoration-none">@Model.lblHome</a>
+                </li>
+                <li class="breadcrumb-item d-flex align-items-center">
+                    <img src="images/management.png" alt="Home" width="16" height="16" class="me-2" />
+                    <a href="/ManageUsers" class="text-decoration-none">@Model.lblUsers</a>
+                </li>
+                <li class="breadcrumb-item d-flex align-items-center">
+                    <img src="images/management.png" alt="Home" width="16" height="16" class="me-2" />
+                     <a asp-page="Index" class="text-decoration-none">@Model.lblHazardType</a>
+                </li>
+                <li class="breadcrumb-item d-flex align-items-center">
+                    <img src="images/management.png" alt="Home" width="16" height="16" class="me-2" />
+                     Add Hazard Type
+                </li>
+            </ol>
+        </nav>
+        <h2 class="h4">Add Hazard Type</h2>
+    </div>
+</div>
 
-<h1>Create</h1>
-
-<h4>HazardType</h4>
-<hr />
 <div class="row">
     <div class="col-md-4">
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
             <div class="mb-3">
-                <label asp-for="HazardType.HazardTypeName" class="form-label"></label>
+                <label asp-for="HazardType.HazardTypeName" class="form-label">@Model.lblHazardTypeName</label>
                 <input asp-for="HazardType.HazardTypeName" class="form-control" />
                 <span asp-validation-for="HazardType.HazardTypeName" class="text-danger"></span>
             </div>
