--- a/Pages/HazardTypes/Index.cshtml
+++ b/Pages/HazardTypes/Index.cshtml
@@ -6,21 +6,27 @@
 }
 
 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center py-4 pb-2">
-    <!-- Breadcrumb -->
-    <nav aria-label="breadcrumb" class="mb-3">
-        <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a asp-page="/Home">Home</a></li>
-            <li class="breadcrumb-item"><a asp-page="/ManageUsers">Users</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Hazard Types</li>
-        </ol>
-    </nav>
-    <h1 class="mb-4">Hazard Types</h1>
+    <div class="d-block mb-4 mb-md-0">
+        <nav aria-label="breadcrumb">
+            <ol class="breadcrumb bg-transparent p-2 mb-0">
+                <li class="breadcrumb-item d-flex align-items-center">
+                    <img src="images/home.png" alt="Home" width="16" height="16" class="me-2" />
+                    <a href="/Home" class="text-decoration-none">@Model.lblHome</a>
+                </li>
+                <li class="breadcrumb-item d-flex align-items-center">
+                    <img src="images/management.png" alt="Home" width="16" height="16" class="me-2" />
+                    <a href="/ManageUsers" class="text-decoration-none">@Model.lblUsers</a>
+                </li>
+                <li class="breadcrumb-item d-flex align-items-center">
+                    <img src="images/management.png" alt="Home" width="16" height="16" class="me-2" />
+                     @Model.lblHazardType
+                </li>
+            </ol>
+        </nav>
+        <h2 class="h4"> @Model.lblHazardType</h2>
+        
+    </div>
     <div class="btn-toolbar mb-2 mb-md-0 d-flex flex-wrap">
-        <!-- Back Button -->
-        <div class="btn-group d-flex mx-3 ms-lg-3">
-            <a asp-page="/ManageUsers" class="btn btn-secondary">&larr; Back </a>
-        </div>
-
         <div class="btn-group d-flex mx-3 ms-lg-3">
             <a asp-page="Create" class="btn btn-primary">+ Add Hazard Type</a>
         </div>
@@ -35,8 +41,8 @@
             <table class="table">
                 <thead>
                     <tr>
-                        <th>Hazard Type Name</th>
-                        <th>Actions</th>
+                        <th>@Model.lblHazardTypeName</th>
+                        <th>@Model.lblAction</th>
                     </tr>
                 </thead>
                 <tbody>
