--- a/Pages/Rep_HazardMaterial.cshtml
+++ b/Pages/Rep_HazardMaterial.cshtml
@@ -80,7 +80,14 @@
                  >@Model.lblInventory</a>
             <a href="Rep_HazardMaterial" class="btn btn-gray-600 d-inline-flex align-items-center  report mx-2"
                  >@Model.lblHazardousMaterials</a>
-            <a href="Rep_DamagedItems" class="btn btn-outline-gray-600 d-inline-flex  align-items-center report mx-2">@Model.lblDamagedItems</a>
+            <a href="Rep_DamagedItems"
+                class="btn btn-outline-gray-600 d-inline-flex  align-items-center report mx-2">@Model.lblDamagedItems</a>
+            <a href="Rep_Item"
+                class="btn btn-outline-gray-600 d-inline-flex  align-items-center report mx-2">@Model.lblItems</a>
+            <a href="Rep_ItemCards"
+                class="btn btn-outline-gray-600 d-inline-flex  align-items-center report mx-2">@Model.lblItemCards</a>
+            <a href="Rep_ItemMovement"
+                class="btn btn-outline-gray-600 d-inline-flex  align-items-center report mx-2">@Model.lblItemMovement</a>
             @if (Model.CanManageUsers)
             {
                 <a href="Rep_UserActivity"
