--- a/Pages/ViewStoretypes.cshtml
+++ b/Pages/ViewStoretypes.cshtml
@@ -22,6 +22,12 @@
         <h2 class="h4">Warehouse Type</h2>
         <!-- <p class="mb-0">Your web analytics dashboard template.</p> -->
     </div>
+    <div class="btn-toolbar mb-2 mb-md-0 d-flex flex-wrap">
+        <div class="btn-group d-flex mx-3 ms-lg-3">
+            <a  href="/AddStoreTypes" class="btn btn-primary">+ Add Warehouse Type</a>
+        </div>
+    </div>
+    
 </div>
 
 
