--- a/Pages/ManageSupplier.cshtml
+++ b/Pages/ManageSupplier.cshtml
@@ -78,9 +78,13 @@
                         <img src="images/home.png" alt="Home" width="16" height="16" class="me-2" />
                         <a href="/Home" class="text-decoration-none">@Model.lblHome</a>
                     </li>
-                    <li class="breadcrumb-item d-flex align-items-center">
+                    @* <li class="breadcrumb-item d-flex align-items-center">
                         <img src="images/supplies.png" alt="Home" width="16" height="16" class="me-2" />
                         <a href="/Supplies" class="text-decoration-none">@Model.lblSupplies</a>
+                    </li> *@
+                    <li class="breadcrumb-item d-flex align-items-center">
+                            <img src="images/retailer.png" alt="Home" width="16" height="16" class="me-2" />
+                            <a href="/ManageStore" class="text-decoration-none">@Model.lblStores</a>
                     </li>
                     <li class="breadcrumb-item d-flex align-items-center">
                         <img src="images/supplies.png" alt="Home" width="16" height="16" class="me-2" />
