--- a/Pages/Supplies.cshtml
+++ b/Pages/Supplies.cshtml
@@ -205,10 +205,10 @@
                     @Model.lblAddSupplies
                 </a>
             </div>
-            <a href="ManageSupplier" class="btn justify-content-center top-big-btn btn-outline-gray-600 d-inline-flex align-items-center">
+            @* <a href="ManageSupplier" class="btn justify-content-center top-big-btn btn-outline-gray-600 d-inline-flex align-items-center">
                 <img b-ie9pk9zf1q="" class="icon text-white icon-xs mx-2" src="images/manage-b.png">
                 @Model.lblManageSuppliers
-            </a>
+            </a> *@
 
         </div>
     </div>
