--- a/Pages/ManageStore.cshtml
+++ b/Pages/ManageStore.cshtml
@@ -153,6 +153,12 @@
                     @Model.lblManageRooms
                 </a>
             </div>
+            <div class="btn-group ms-2 ms-lg-3">
+                <a href="ManageSupplier" class="btn justify-content-center top-big-btn btn-outline-gray-600 d-inline-flex align-items-center">
+                <img b-ie9pk9zf1q="" class="icon text-white icon-xs mx-2" src="images/manage-b.png">
+                @Model.lblManageSuppliers
+            </a>
+            </div>
         </div>
     </div>
     <div class="mb-4">
