--- a/Pages/ViewDoctypes.cshtml
+++ b/Pages/ViewDoctypes.cshtml
@@ -14,7 +14,7 @@
                 </li>
                 <li class="breadcrumb-item d-flex align-items-center">
                     <img src="images/management.png" alt="Home" width="16" height="16" class="me-2" />
-                    Users
+                    <a href="/ManageUsers" class="text-decoration-none">Users</a>
                 </li>
                  <li class="breadcrumb-item d-flex align-items-center">
                     <img src="images/management.png" alt="Home" width="16" height="16" class="me-2" />
@@ -26,9 +26,6 @@
         <!-- <p class="mb-0">Your web analytics dashboard template.</p> -->
     </div>
     <div class="btn-toolbar mb-2 mb-md-0 d-flex flex-wrap">
-        <div class="btn-group d-flex mx-3 ms-lg-3">
-                <a asp-page="/ManageUsers" class="btn btn-secondary">&larr; Back </a>
-        </div>
         <div class="btn-group d-flex mx-3 ms-lg-3">
             <a asp-page="AddDocumentType" class="btn btn-primary">+ Add Document Type</a>
         </div>
